[project @ 2005-06-01 14:03:28 by rlubke] M build.properties.tomcat - updated property to use correct endorsed.dirs property
M jsf-api/build.xml
- pass java.endorsed.dirs property to unit tests

M jsf-api/template-src/MethodExpressionMethodBindingAdapter.java
- make MethodInfo field transient

M jsf-api/test/javax/faces/mock/MockELContext.java
M jsf-ri/src/com/sun/faces/el/ELContextImpl.java
- updated based on EL API changes

M jsf-ri/src/com/sun/faces/RIConstants.java
 - removed mutable fields

M jsf-ri/src/com/sun/faces/config/ConfigureListener.java
 - Replaced direct modifications to mutable fields in RIConstants with
   new calls to Util.
- Replaced catch of Exception with more specific exception type

M jsf-ri/src/com/sun/faces/context/ExternalContextImpl.java
   - Replaced direct modifications to mutable fields in RIConstants with
     new calls to Util.

M jsf-ri/src/com/sun/faces/el/ELConstants.java
  - removed exposed IMPLICIT_OBJECTS array since
    the values of the array could be modified (moved down
    to ImplicitObjectELResolver)

M jsf-ri/src/com/sun/faces/el/ImplicitObjectELResolver.java
  - Added package private IMPLICIT_OBJECTS array
  - removed unnecessary null checks

M jsf-ri/src/com/sun/faces/el/ImplicitObjectELResolverForJsp.java
 - extend ImplicitObjectELResolver
 - removed unnecessary null checks

M jsf-ri/src/com/sun/faces/renderkit/html_basic/ButtonRenderer.java
 - removed unnecessary null checks

M jsf-ri/src/com/sun/faces/taglib/html_basic/HtmlBasicValidator.java
M jsf-ri/src/com/sun/faces/taglib/jsf_core/CoreValidator.java
  - Replaced direct modifications to mutable fields in RIConstants with
     new calls to Util.

M jsf-ri/src/com/sun/faces/util/DebugUtil.java
 - removed unecessary null check

M jsf-ri/src/com/sun/faces/util/Util.java
  - added fields with accessors to replace the mutable fields in RIConstants

M jsf-ri/test/com/sun/faces/FacesTestCaseService.java
M jsf-ri/test/com/sun/faces/lifecycle/TestLifecycleImpl.java
M jsf-r